// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatTimeseriesMap empty input: empty input 1`] = `
Object {
  "All": Array [
    Object {
      "x": 999999105000,
      "y": 0,
    },
    Object {
      "x": 999999110000,
      "y": 0,
    },
    Object {
      "x": 999999115000,
      "y": 0,
    },
    Object {
      "x": 999999120000,
      "y": 0,
    },
    Object {
      "x": 999999125000,
      "y": 0,
    },
    Object {
      "x": 999999130000,
      "y": 0,
    },
    Object {
      "x": 999999135000,
      "y": 0,
    },
    Object {
      "x": 999999140000,
      "y": 0,
    },
    Object {
      "x": 999999145000,
      "y": 0,
    },
    Object {
      "x": 999999150000,
      "y": 0,
    },
    Object {
      "x": 999999155000,
      "y": 0,
    },
    Object {
      "x": 999999160000,
      "y": 0,
    },
    Object {
      "x": 999999165000,
      "y": 0,
    },
    Object {
      "x": 999999170000,
      "y": 0,
    },
    Object {
      "x": 999999175000,
      "y": 0,
    },
    Object {
      "x": 999999180000,
      "y": 0,
    },
    Object {
      "x": 999999185000,
      "y": 0,
    },
    Object {
      "x": 999999190000,
      "y": 0,
    },
    Object {
      "x": 999999195000,
      "y": 0,
    },
    Object {
      "x": 999999200000,
      "y": 0,
    },
    Object {
      "x": 999999205000,
      "y": 0,
    },
    Object {
      "x": 999999210000,
      "y": 0,
    },
    Object {
      "x": 999999215000,
      "y": 0,
    },
    Object {
      "x": 999999220000,
      "y": 0,
    },
    Object {
      "x": 999999225000,
      "y": 0,
    },
    Object {
      "x": 999999230000,
      "y": 0,
    },
    Object {
      "x": 999999235000,
      "y": 0,
    },
    Object {
      "x": 999999240000,
      "y": 0,
    },
    Object {
      "x": 999999245000,
      "y": 0,
    },
    Object {
      "x": 999999250000,
      "y": 0,
    },
    Object {
      "x": 999999255000,
      "y": 0,
    },
    Object {
      "x": 999999260000,
      "y": 0,
    },
    Object {
      "x": 999999265000,
      "y": 0,
    },
    Object {
      "x": 999999270000,
      "y": 0,
    },
    Object {
      "x": 999999275000,
      "y": 0,
    },
    Object {
      "x": 999999280000,
      "y": 0,
    },
    Object {
      "x": 999999285000,
      "y": 0,
    },
    Object {
      "x": 999999290000,
      "y": 0,
    },
    Object {
      "x": 999999295000,
      "y": 0,
    },
    Object {
      "x": 999999300000,
      "y": 0,
    },
    Object {
      "x": 999999305000,
      "y": 0,
    },
    Object {
      "x": 999999310000,
      "y": 0,
    },
    Object {
      "x": 999999315000,
      "y": 0,
    },
    Object {
      "x": 999999320000,
      "y": 0,
    },
    Object {
      "x": 999999325000,
      "y": 0,
    },
    Object {
      "x": 999999330000,
      "y": 0,
    },
    Object {
      "x": 999999335000,
      "y": 0,
    },
    Object {
      "x": 999999340000,
      "y": 0,
    },
    Object {
      "x": 999999345000,
      "y": 0,
    },
    Object {
      "x": 999999350000,
      "y": 0,
    },
    Object {
      "x": 999999355000,
      "y": 0,
    },
    Object {
      "x": 999999360000,
      "y": 0,
    },
    Object {
      "x": 999999365000,
      "y": 0,
    },
    Object {
      "x": 999999370000,
      "y": 0,
    },
    Object {
      "x": 999999375000,
      "y": 0,
    },
    Object {
      "x": 999999380000,
      "y": 0,
    },
    Object {
      "x": 999999385000,
      "y": 0,
    },
    Object {
      "x": 999999390000,
      "y": 0,
    },
    Object {
      "x": 999999395000,
      "y": 0,
    },
    Object {
      "x": 999999400000,
      "y": 0,
    },
    Object {
      "x": 999999405000,
      "y": 0,
    },
    Object {
      "x": 999999410000,
      "y": 0,
    },
    Object {
      "x": 999999415000,
      "y": 0,
    },
    Object {
      "x": 999999420000,
      "y": 0,
    },
    Object {
      "x": 999999425000,
      "y": 0,
    },
    Object {
      "x": 999999430000,
      "y": 0,
    },
    Object {
      "x": 999999435000,
      "y": 0,
    },
    Object {
      "x": 999999440000,
      "y": 0,
    },
    Object {
      "x": 999999445000,
      "y": 0,
    },
    Object {
      "x": 999999450000,
      "y": 0,
    },
    Object {
      "x": 999999455000,
      "y": 0,
    },
    Object {
      "x": 999999460000,
      "y": 0,
    },
    Object {
      "x": 999999465000,
      "y": 0,
    },
    Object {
      "x": 999999470000,
      "y": 0,
    },
    Object {
      "x": 999999475000,
      "y": 0,
    },
    Object {
      "x": 999999480000,
      "y": 0,
    },
    Object {
      "x": 999999485000,
      "y": 0,
    },
    Object {
      "x": 999999490000,
      "y": 0,
    },
    Object {
      "x": 999999495000,
      "y": 0,
    },
    Object {
      "x": 999999500000,
      "y": 0,
    },
    Object {
      "x": 999999505000,
      "y": 0,
    },
    Object {
      "x": 999999510000,
      "y": 0,
    },
    Object {
      "x": 999999515000,
      "y": 0,
    },
    Object {
      "x": 999999520000,
      "y": 0,
    },
    Object {
      "x": 999999525000,
      "y": 0,
    },
    Object {
      "x": 999999530000,
      "y": 0,
    },
    Object {
      "x": 999999535000,
      "y": 0,
    },
    Object {
      "x": 999999540000,
      "y": 0,
    },
    Object {
      "x": 999999545000,
      "y": 0,
    },
    Object {
      "x": 999999550000,
      "y": 0,
    },
    Object {
      "x": 999999555000,
      "y": 0,
    },
    Object {
      "x": 999999560000,
      "y": 0,
    },
    Object {
      "x": 999999565000,
      "y": 0,
    },
    Object {
      "x": 999999570000,
      "y": 0,
    },
    Object {
      "x": 999999575000,
      "y": 0,
    },
    Object {
      "x": 999999580000,
      "y": 0,
    },
    Object {
      "x": 999999585000,
      "y": 0,
    },
    Object {
      "x": 999999590000,
      "y": 0,
    },
    Object {
      "x": 999999595000,
      "y": 0,
    },
    Object {
      "x": 999999600000,
      "y": 0,
    },
    Object {
      "x": 999999605000,
      "y": 0,
    },
    Object {
      "x": 999999610000,
      "y": 0,
    },
    Object {
      "x": 999999615000,
      "y": 0,
    },
    Object {
      "x": 999999620000,
      "y": 0,
    },
    Object {
      "x": 999999625000,
      "y": 0,
    },
    Object {
      "x": 999999630000,
      "y": 0,
    },
    Object {
      "x": 999999635000,
      "y": 0,
    },
    Object {
      "x": 999999640000,
      "y": 0,
    },
    Object {
      "x": 999999645000,
      "y": 0,
    },
    Object {
      "x": 999999650000,
      "y": 0,
    },
    Object {
      "x": 999999655000,
      "y": 0,
    },
    Object {
      "x": 999999660000,
      "y": 0,
    },
    Object {
      "x": 999999665000,
      "y": 0,
    },
    Object {
      "x": 999999670000,
      "y": 0,
    },
    Object {
      "x": 999999675000,
      "y": 0,
    },
    Object {
      "x": 999999680000,
      "y": 0,
    },
    Object {
      "x": 999999685000,
      "y": 0,
    },
    Object {
      "x": 999999690000,
      "y": 0,
    },
    Object {
      "x": 999999695000,
      "y": 0,
    },
    Object {
      "x": 999999700000,
      "y": 0,
    },
    Object {
      "x": 999999705000,
      "y": 0,
    },
    Object {
      "x": 999999710000,
      "y": 0,
    },
    Object {
      "x": 999999715000,
      "y": 0,
    },
    Object {
      "x": 999999720000,
      "y": 0,
    },
    Object {
      "x": 999999725000,
      "y": 0,
    },
    Object {
      "x": 999999730000,
      "y": 0,
    },
    Object {
      "x": 999999735000,
      "y": 0,
    },
    Object {
      "x": 999999740000,
      "y": 0,
    },
    Object {
      "x": 999999745000,
      "y": 0,
    },
    Object {
      "x": 999999750000,
      "y": 0,
    },
    Object {
      "x": 999999755000,
      "y": 0,
    },
    Object {
      "x": 999999760000,
      "y": 0,
    },
    Object {
      "x": 999999765000,
      "y": 0,
    },
    Object {
      "x": 999999770000,
      "y": 0,
    },
    Object {
      "x": 999999775000,
      "y": 0,
    },
    Object {
      "x": 999999780000,
      "y": 0,
    },
    Object {
      "x": 999999785000,
      "y": 0,
    },
    Object {
      "x": 999999790000,
      "y": 0,
    },
    Object {
      "x": 999999795000,
      "y": 0,
    },
    Object {
      "x": 999999800000,
      "y": 0,
    },
    Object {
      "x": 999999805000,
      "y": 0,
    },
    Object {
      "x": 999999810000,
      "y": 0,
    },
    Object {
      "x": 999999815000,
      "y": 0,
    },
    Object {
      "x": 999999820000,
      "y": 0,
    },
    Object {
      "x": 999999825000,
      "y": 0,
    },
    Object {
      "x": 999999830000,
      "y": 0,
    },
    Object {
      "x": 999999835000,
      "y": 0,
    },
    Object {
      "x": 999999840000,
      "y": 0,
    },
    Object {
      "x": 999999845000,
      "y": 0,
    },
    Object {
      "x": 999999850000,
      "y": 0,
    },
    Object {
      "x": 999999855000,
      "y": 0,
    },
    Object {
      "x": 999999860000,
      "y": 0,
    },
    Object {
      "x": 999999865000,
      "y": 0,
    },
    Object {
      "x": 999999870000,
      "y": 0,
    },
    Object {
      "x": 999999875000,
      "y": 0,
    },
    Object {
      "x": 999999880000,
      "y": 0,
    },
    Object {
      "x": 999999885000,
      "y": 0,
    },
    Object {
      "x": 999999890000,
      "y": 0,
    },
    Object {
      "x": 999999895000,
      "y": 0,
    },
    Object {
      "x": 999999900000,
      "y": 0,
    },
    Object {
      "x": 999999905000,
      "y": 0,
    },
    Object {
      "x": 999999910000,
      "y": 0,
    },
    Object {
      "x": 999999915000,
      "y": 0,
    },
    Object {
      "x": 999999920000,
      "y": 0,
    },
    Object {
      "x": 999999925000,
      "y": 0,
    },
    Object {
      "x": 999999930000,
      "y": 0,
    },
    Object {
      "x": 999999935000,
      "y": 0,
    },
    Object {
      "x": 999999940000,
      "y": 0,
    },
    Object {
      "x": 999999945000,
      "y": 0,
    },
    Object {
      "x": 999999950000,
      "y": 0,
    },
    Object {
      "x": 999999955000,
      "y": 0,
    },
    Object {
      "x": 999999960000,
      "y": 0,
    },
    Object {
      "x": 999999965000,
      "y": 0,
    },
    Object {
      "x": 999999970000,
      "y": 0,
    },
    Object {
      "x": 999999975000,
      "y": 0,
    },
    Object {
      "x": 999999980000,
      "y": 0,
    },
    Object {
      "x": 999999985000,
      "y": 0,
    },
    Object {
      "x": 999999990000,
      "y": 0,
    },
    Object {
      "x": 999999995000,
      "y": 0,
    },
    Object {
      "x": 1000000000000,
      "y": 0,
    },
  ],
}
`;

exports[`formatTimeseriesMap multiple series: multiple series 1`] = `
Object {
  "First": Array [
    Object {
      "x": 999999105000,
      "y": 0,
    },
    Object {
      "x": 999999110000,
      "y": 0,
    },
    Object {
      "x": 999999115000,
      "y": 0,
    },
    Object {
      "x": 999999120000,
      "y": 0,
    },
    Object {
      "x": 999999125000,
      "y": 0,
    },
    Object {
      "x": 999999130000,
      "y": 0,
    },
    Object {
      "x": 999999135000,
      "y": 0,
    },
    Object {
      "x": 999999140000,
      "y": 0,
    },
    Object {
      "x": 999999145000,
      "y": 0,
    },
    Object {
      "x": 999999150000,
      "y": 0,
    },
    Object {
      "x": 999999155000,
      "y": 0,
    },
    Object {
      "x": 999999160000,
      "y": 0,
    },
    Object {
      "x": 999999165000,
      "y": 0,
    },
    Object {
      "x": 999999170000,
      "y": 0,
    },
    Object {
      "x": 999999175000,
      "y": 0,
    },
    Object {
      "x": 999999180000,
      "y": 0,
    },
    Object {
      "x": 999999185000,
      "y": 0,
    },
    Object {
      "x": 999999190000,
      "y": 0,
    },
    Object {
      "x": 999999195000,
      "y": 0,
    },
    Object {
      "x": 999999200000,
      "y": 0,
    },
    Object {
      "x": 999999205000,
      "y": 0,
    },
    Object {
      "x": 999999210000,
      "y": 0,
    },
    Object {
      "x": 999999215000,
      "y": 0,
    },
    Object {
      "x": 999999220000,
      "y": 0,
    },
    Object {
      "x": 999999225000,
      "y": 0,
    },
    Object {
      "x": 999999230000,
      "y": 0,
    },
    Object {
      "x": 999999235000,
      "y": 0,
    },
    Object {
      "x": 999999240000,
      "y": 0,
    },
    Object {
      "x": 999999245000,
      "y": 0,
    },
    Object {
      "x": 999999250000,
      "y": 0,
    },
    Object {
      "x": 999999255000,
      "y": 0,
    },
    Object {
      "x": 999999260000,
      "y": 0,
    },
    Object {
      "x": 999999265000,
      "y": 0,
    },
    Object {
      "x": 999999270000,
      "y": 0,
    },
    Object {
      "x": 999999275000,
      "y": 0,
    },
    Object {
      "x": 999999280000,
      "y": 0,
    },
    Object {
      "x": 999999285000,
      "y": 0,
    },
    Object {
      "x": 999999290000,
      "y": 0,
    },
    Object {
      "x": 999999295000,
      "y": 0,
    },
    Object {
      "x": 999999300000,
      "y": 0,
    },
    Object {
      "x": 999999305000,
      "y": 0,
    },
    Object {
      "x": 999999310000,
      "y": 0,
    },
    Object {
      "x": 999999315000,
      "y": 0,
    },
    Object {
      "x": 999999320000,
      "y": 0,
    },
    Object {
      "x": 999999325000,
      "y": 0,
    },
    Object {
      "x": 999999330000,
      "y": 0,
    },
    Object {
      "x": 999999335000,
      "y": 0,
    },
    Object {
      "x": 999999340000,
      "y": 0,
    },
    Object {
      "x": 999999345000,
      "y": 0,
    },
    Object {
      "x": 999999350000,
      "y": 0,
    },
    Object {
      "x": 999999355000,
      "y": 0,
    },
    Object {
      "x": 999999360000,
      "y": 0,
    },
    Object {
      "x": 999999365000,
      "y": 0,
    },
    Object {
      "x": 999999370000,
      "y": 0,
    },
    Object {
      "x": 999999375000,
      "y": 0,
    },
    Object {
      "x": 999999380000,
      "y": 0,
    },
    Object {
      "x": 999999385000,
      "y": 0,
    },
    Object {
      "x": 999999390000,
      "y": 0,
    },
    Object {
      "x": 999999395000,
      "y": 0,
    },
    Object {
      "x": 999999400000,
      "y": 0,
    },
    Object {
      "x": 999999405000,
      "y": 0,
    },
    Object {
      "x": 999999410000,
      "y": 0,
    },
    Object {
      "x": 999999415000,
      "y": 0,
    },
    Object {
      "x": 999999420000,
      "y": 0,
    },
    Object {
      "x": 999999425000,
      "y": 0,
    },
    Object {
      "x": 999999430000,
      "y": 0,
    },
    Object {
      "x": 999999435000,
      "y": 0,
    },
    Object {
      "x": 999999440000,
      "y": 0,
    },
    Object {
      "x": 999999445000,
      "y": 0,
    },
    Object {
      "x": 999999450000,
      "y": 0,
    },
    Object {
      "x": 999999455000,
      "y": 0,
    },
    Object {
      "x": 999999460000,
      "y": 0,
    },
    Object {
      "x": 999999465000,
      "y": 0,
    },
    Object {
      "x": 999999470000,
      "y": 0,
    },
    Object {
      "x": 999999475000,
      "y": 0,
    },
    Object {
      "x": 999999480000,
      "y": 0,
    },
    Object {
      "x": 999999485000,
      "y": 0,
    },
    Object {
      "x": 999999490000,
      "y": 0,
    },
    Object {
      "x": 999999495000,
      "y": 0,
    },
    Object {
      "x": 999999500000,
      "y": 0,
    },
    Object {
      "x": 999999505000,
      "y": 0,
    },
    Object {
      "x": 999999510000,
      "y": 0,
    },
    Object {
      "x": 999999515000,
      "y": 0,
    },
    Object {
      "x": 999999520000,
      "y": 0,
    },
    Object {
      "x": 999999525000,
      "y": 0,
    },
    Object {
      "x": 999999530000,
      "y": 0,
    },
    Object {
      "x": 999999535000,
      "y": 0,
    },
    Object {
      "x": 999999540000,
      "y": 0,
    },
    Object {
      "x": 999999545000,
      "y": 0,
    },
    Object {
      "x": 999999550000,
      "y": 0,
    },
    Object {
      "x": 999999555000,
      "y": 0,
    },
    Object {
      "x": 999999560000,
      "y": 0,
    },
    Object {
      "x": 999999565000,
      "y": 0,
    },
    Object {
      "x": 999999570000,
      "y": 0,
    },
    Object {
      "x": 999999575000,
      "y": 0,
    },
    Object {
      "x": 999999580000,
      "y": 0,
    },
    Object {
      "x": 999999585000,
      "y": 0,
    },
    Object {
      "x": 999999590000,
      "y": 0,
    },
    Object {
      "x": 999999595000,
      "y": 0,
    },
    Object {
      "x": 999999600000,
      "y": 0,
    },
    Object {
      "x": 999999605000,
      "y": 0,
    },
    Object {
      "x": 999999610000,
      "y": 0,
    },
    Object {
      "x": 999999615000,
      "y": 0,
    },
    Object {
      "x": 999999620000,
      "y": 0,
    },
    Object {
      "x": 999999625000,
      "y": 0,
    },
    Object {
      "x": 999999630000,
      "y": 0,
    },
    Object {
      "x": 999999635000,
      "y": 0,
    },
    Object {
      "x": 999999640000,
      "y": 0,
    },
    Object {
      "x": 999999645000,
      "y": 0,
    },
    Object {
      "x": 999999650000,
      "y": 0,
    },
    Object {
      "x": 999999655000,
      "y": 0,
    },
    Object {
      "x": 999999660000,
      "y": 0,
    },
    Object {
      "x": 999999665000,
      "y": 0,
    },
    Object {
      "x": 999999670000,
      "y": 0,
    },
    Object {
      "x": 999999675000,
      "y": 0,
    },
    Object {
      "x": 999999680000,
      "y": 0,
    },
    Object {
      "x": 999999685000,
      "y": 0,
    },
    Object {
      "x": 999999690000,
      "y": 0,
    },
    Object {
      "x": 999999695000,
      "y": 0,
    },
    Object {
      "x": 999999700000,
      "y": 0,
    },
    Object {
      "x": 999999705000,
      "y": 0,
    },
    Object {
      "x": 999999710000,
      "y": 0,
    },
    Object {
      "x": 999999715000,
      "y": 0,
    },
    Object {
      "x": 999999720000,
      "y": 0,
    },
    Object {
      "x": 999999725000,
      "y": 0,
    },
    Object {
      "x": 999999730000,
      "y": 0,
    },
    Object {
      "x": 999999735000,
      "y": 0,
    },
    Object {
      "x": 999999740000,
      "y": 0,
    },
    Object {
      "x": 999999745000,
      "y": 0,
    },
    Object {
      "x": 999999750000,
      "y": 0,
    },
    Object {
      "x": 999999755000,
      "y": 0,
    },
    Object {
      "x": 999999760000,
      "y": 0,
    },
    Object {
      "x": 999999765000,
      "y": 0,
    },
    Object {
      "x": 999999770000,
      "y": 0,
    },
    Object {
      "x": 999999775000,
      "y": 0,
    },
    Object {
      "x": 999999780000,
      "y": 0,
    },
    Object {
      "x": 999999785000,
      "y": 0,
    },
    Object {
      "x": 999999790000,
      "y": 0,
    },
    Object {
      "x": 999999795000,
      "y": 0,
    },
    Object {
      "x": 999999800000,
      "y": 0,
    },
    Object {
      "x": 999999805000,
      "y": 0,
    },
    Object {
      "x": 999999810000,
      "y": 0,
    },
    Object {
      "x": 999999815000,
      "y": 0,
    },
    Object {
      "x": 999999820000,
      "y": 0,
    },
    Object {
      "x": 999999825000,
      "y": 0,
    },
    Object {
      "x": 999999830000,
      "y": 0,
    },
    Object {
      "x": 999999835000,
      "y": 0,
    },
    Object {
      "x": 999999840000,
      "y": 0,
    },
    Object {
      "x": 999999845000,
      "y": 0,
    },
    Object {
      "x": 999999850000,
      "y": 0,
    },
    Object {
      "x": 999999855000,
      "y": 0,
    },
    Object {
      "x": 999999860000,
      "y": 0,
    },
    Object {
      "x": 999999865000,
      "y": 0,
    },
    Object {
      "x": 999999870000,
      "y": 0,
    },
    Object {
      "x": 999999875000,
      "y": 0,
    },
    Object {
      "x": 999999880000,
      "y": 0,
    },
    Object {
      "x": 999999885000,
      "y": 0,
    },
    Object {
      "x": 999999890000,
      "y": 0,
    },
    Object {
      "x": 999999895000,
      "y": 0,
    },
    Object {
      "x": 999999900000,
      "y": 0,
    },
    Object {
      "x": 999999905000,
      "y": 0,
    },
    Object {
      "x": 999999910000,
      "y": 0,
    },
    Object {
      "x": 999999915000,
      "y": 0,
    },
    Object {
      "x": 999999920000,
      "y": 0,
    },
    Object {
      "x": 999999925000,
      "y": 0,
    },
    Object {
      "x": 999999930000,
      "y": 0,
    },
    Object {
      "x": 999999935000,
      "y": 0,
    },
    Object {
      "x": 999999940000,
      "y": 0,
    },
    Object {
      "x": 999999945000,
      "y": 0,
    },
    Object {
      "x": 999999950000,
      "y": 0,
    },
    Object {
      "x": 999999955000,
      "y": 0,
    },
    Object {
      "x": 999999960000,
      "y": 0,
    },
    Object {
      "x": 999999965000,
      "y": 0,
    },
    Object {
      "x": 999999970000,
      "y": 0,
    },
    Object {
      "x": 999999975000,
      "y": 0,
    },
    Object {
      "x": 999999980000,
      "y": 0,
    },
    Object {
      "x": 999999985000,
      "y": 0,
    },
    Object {
      "x": 999999990000,
      "y": 1,
    },
    Object {
      "x": 999999995000,
      "y": 2,
    },
    Object {
      "x": 1000000000000,
      "y": 3,
    },
  ],
  "Second": Array [
    Object {
      "x": 999999105000,
      "y": 0,
    },
    Object {
      "x": 999999110000,
      "y": 0,
    },
    Object {
      "x": 999999115000,
      "y": 0,
    },
    Object {
      "x": 999999120000,
      "y": 0,
    },
    Object {
      "x": 999999125000,
      "y": 0,
    },
    Object {
      "x": 999999130000,
      "y": 0,
    },
    Object {
      "x": 999999135000,
      "y": 0,
    },
    Object {
      "x": 999999140000,
      "y": 0,
    },
    Object {
      "x": 999999145000,
      "y": 0,
    },
    Object {
      "x": 999999150000,
      "y": 0,
    },
    Object {
      "x": 999999155000,
      "y": 0,
    },
    Object {
      "x": 999999160000,
      "y": 0,
    },
    Object {
      "x": 999999165000,
      "y": 0,
    },
    Object {
      "x": 999999170000,
      "y": 0,
    },
    Object {
      "x": 999999175000,
      "y": 0,
    },
    Object {
      "x": 999999180000,
      "y": 0,
    },
    Object {
      "x": 999999185000,
      "y": 0,
    },
    Object {
      "x": 999999190000,
      "y": 0,
    },
    Object {
      "x": 999999195000,
      "y": 0,
    },
    Object {
      "x": 999999200000,
      "y": 0,
    },
    Object {
      "x": 999999205000,
      "y": 0,
    },
    Object {
      "x": 999999210000,
      "y": 0,
    },
    Object {
      "x": 999999215000,
      "y": 0,
    },
    Object {
      "x": 999999220000,
      "y": 0,
    },
    Object {
      "x": 999999225000,
      "y": 0,
    },
    Object {
      "x": 999999230000,
      "y": 0,
    },
    Object {
      "x": 999999235000,
      "y": 0,
    },
    Object {
      "x": 999999240000,
      "y": 0,
    },
    Object {
      "x": 999999245000,
      "y": 0,
    },
    Object {
      "x": 999999250000,
      "y": 0,
    },
    Object {
      "x": 999999255000,
      "y": 0,
    },
    Object {
      "x": 999999260000,
      "y": 0,
    },
    Object {
      "x": 999999265000,
      "y": 0,
    },
    Object {
      "x": 999999270000,
      "y": 0,
    },
    Object {
      "x": 999999275000,
      "y": 0,
    },
    Object {
      "x": 999999280000,
      "y": 0,
    },
    Object {
      "x": 999999285000,
      "y": 0,
    },
    Object {
      "x": 999999290000,
      "y": 0,
    },
    Object {
      "x": 999999295000,
      "y": 0,
    },
    Object {
      "x": 999999300000,
      "y": 0,
    },
    Object {
      "x": 999999305000,
      "y": 0,
    },
    Object {
      "x": 999999310000,
      "y": 0,
    },
    Object {
      "x": 999999315000,
      "y": 0,
    },
    Object {
      "x": 999999320000,
      "y": 0,
    },
    Object {
      "x": 999999325000,
      "y": 0,
    },
    Object {
      "x": 999999330000,
      "y": 0,
    },
    Object {
      "x": 999999335000,
      "y": 0,
    },
    Object {
      "x": 999999340000,
      "y": 0,
    },
    Object {
      "x": 999999345000,
      "y": 0,
    },
    Object {
      "x": 999999350000,
      "y": 0,
    },
    Object {
      "x": 999999355000,
      "y": 0,
    },
    Object {
      "x": 999999360000,
      "y": 0,
    },
    Object {
      "x": 999999365000,
      "y": 0,
    },
    Object {
      "x": 999999370000,
      "y": 0,
    },
    Object {
      "x": 999999375000,
      "y": 0,
    },
    Object {
      "x": 999999380000,
      "y": 0,
    },
    Object {
      "x": 999999385000,
      "y": 0,
    },
    Object {
      "x": 999999390000,
      "y": 0,
    },
    Object {
      "x": 999999395000,
      "y": 0,
    },
    Object {
      "x": 999999400000,
      "y": 0,
    },
    Object {
      "x": 999999405000,
      "y": 0,
    },
    Object {
      "x": 999999410000,
      "y": 0,
    },
    Object {
      "x": 999999415000,
      "y": 0,
    },
    Object {
      "x": 999999420000,
      "y": 0,
    },
    Object {
      "x": 999999425000,
      "y": 0,
    },
    Object {
      "x": 999999430000,
      "y": 0,
    },
    Object {
      "x": 999999435000,
      "y": 0,
    },
    Object {
      "x": 999999440000,
      "y": 0,
    },
    Object {
      "x": 999999445000,
      "y": 0,
    },
    Object {
      "x": 999999450000,
      "y": 0,
    },
    Object {
      "x": 999999455000,
      "y": 0,
    },
    Object {
      "x": 999999460000,
      "y": 0,
    },
    Object {
      "x": 999999465000,
      "y": 0,
    },
    Object {
      "x": 999999470000,
      "y": 0,
    },
    Object {
      "x": 999999475000,
      "y": 0,
    },
    Object {
      "x": 999999480000,
      "y": 0,
    },
    Object {
      "x": 999999485000,
      "y": 0,
    },
    Object {
      "x": 999999490000,
      "y": 0,
    },
    Object {
      "x": 999999495000,
      "y": 0,
    },
    Object {
      "x": 999999500000,
      "y": 0,
    },
    Object {
      "x": 999999505000,
      "y": 0,
    },
    Object {
      "x": 999999510000,
      "y": 0,
    },
    Object {
      "x": 999999515000,
      "y": 0,
    },
    Object {
      "x": 999999520000,
      "y": 0,
    },
    Object {
      "x": 999999525000,
      "y": 0,
    },
    Object {
      "x": 999999530000,
      "y": 0,
    },
    Object {
      "x": 999999535000,
      "y": 0,
    },
    Object {
      "x": 999999540000,
      "y": 0,
    },
    Object {
      "x": 999999545000,
      "y": 0,
    },
    Object {
      "x": 999999550000,
      "y": 0,
    },
    Object {
      "x": 999999555000,
      "y": 0,
    },
    Object {
      "x": 999999560000,
      "y": 0,
    },
    Object {
      "x": 999999565000,
      "y": 0,
    },
    Object {
      "x": 999999570000,
      "y": 0,
    },
    Object {
      "x": 999999575000,
      "y": 0,
    },
    Object {
      "x": 999999580000,
      "y": 0,
    },
    Object {
      "x": 999999585000,
      "y": 0,
    },
    Object {
      "x": 999999590000,
      "y": 0,
    },
    Object {
      "x": 999999595000,
      "y": 0,
    },
    Object {
      "x": 999999600000,
      "y": 0,
    },
    Object {
      "x": 999999605000,
      "y": 0,
    },
    Object {
      "x": 999999610000,
      "y": 0,
    },
    Object {
      "x": 999999615000,
      "y": 0,
    },
    Object {
      "x": 999999620000,
      "y": 0,
    },
    Object {
      "x": 999999625000,
      "y": 0,
    },
    Object {
      "x": 999999630000,
      "y": 0,
    },
    Object {
      "x": 999999635000,
      "y": 0,
    },
    Object {
      "x": 999999640000,
      "y": 0,
    },
    Object {
      "x": 999999645000,
      "y": 0,
    },
    Object {
      "x": 999999650000,
      "y": 0,
    },
    Object {
      "x": 999999655000,
      "y": 0,
    },
    Object {
      "x": 999999660000,
      "y": 0,
    },
    Object {
      "x": 999999665000,
      "y": 0,
    },
    Object {
      "x": 999999670000,
      "y": 0,
    },
    Object {
      "x": 999999675000,
      "y": 0,
    },
    Object {
      "x": 999999680000,
      "y": 0,
    },
    Object {
      "x": 999999685000,
      "y": 0,
    },
    Object {
      "x": 999999690000,
      "y": 0,
    },
    Object {
      "x": 999999695000,
      "y": 0,
    },
    Object {
      "x": 999999700000,
      "y": 0,
    },
    Object {
      "x": 999999705000,
      "y": 0,
    },
    Object {
      "x": 999999710000,
      "y": 0,
    },
    Object {
      "x": 999999715000,
      "y": 0,
    },
    Object {
      "x": 999999720000,
      "y": 0,
    },
    Object {
      "x": 999999725000,
      "y": 0,
    },
    Object {
      "x": 999999730000,
      "y": 0,
    },
    Object {
      "x": 999999735000,
      "y": 0,
    },
    Object {
      "x": 999999740000,
      "y": 0,
    },
    Object {
      "x": 999999745000,
      "y": 0,
    },
    Object {
      "x": 999999750000,
      "y": 0,
    },
    Object {
      "x": 999999755000,
      "y": 0,
    },
    Object {
      "x": 999999760000,
      "y": 0,
    },
    Object {
      "x": 999999765000,
      "y": 0,
    },
    Object {
      "x": 999999770000,
      "y": 0,
    },
    Object {
      "x": 999999775000,
      "y": 0,
    },
    Object {
      "x": 999999780000,
      "y": 0,
    },
    Object {
      "x": 999999785000,
      "y": 0,
    },
    Object {
      "x": 999999790000,
      "y": 0,
    },
    Object {
      "x": 999999795000,
      "y": 0,
    },
    Object {
      "x": 999999800000,
      "y": 0,
    },
    Object {
      "x": 999999805000,
      "y": 0,
    },
    Object {
      "x": 999999810000,
      "y": 0,
    },
    Object {
      "x": 999999815000,
      "y": 0,
    },
    Object {
      "x": 999999820000,
      "y": 0,
    },
    Object {
      "x": 999999825000,
      "y": 0,
    },
    Object {
      "x": 999999830000,
      "y": 0,
    },
    Object {
      "x": 999999835000,
      "y": 0,
    },
    Object {
      "x": 999999840000,
      "y": 0,
    },
    Object {
      "x": 999999845000,
      "y": 0,
    },
    Object {
      "x": 999999850000,
      "y": 0,
    },
    Object {
      "x": 999999855000,
      "y": 0,
    },
    Object {
      "x": 999999860000,
      "y": 0,
    },
    Object {
      "x": 999999865000,
      "y": 0,
    },
    Object {
      "x": 999999870000,
      "y": 0,
    },
    Object {
      "x": 999999875000,
      "y": 0,
    },
    Object {
      "x": 999999880000,
      "y": 0,
    },
    Object {
      "x": 999999885000,
      "y": 0,
    },
    Object {
      "x": 999999890000,
      "y": 0,
    },
    Object {
      "x": 999999895000,
      "y": 0,
    },
    Object {
      "x": 999999900000,
      "y": 0,
    },
    Object {
      "x": 999999905000,
      "y": 0,
    },
    Object {
      "x": 999999910000,
      "y": 0,
    },
    Object {
      "x": 999999915000,
      "y": 0,
    },
    Object {
      "x": 999999920000,
      "y": 0,
    },
    Object {
      "x": 999999925000,
      "y": 0,
    },
    Object {
      "x": 999999930000,
      "y": 0,
    },
    Object {
      "x": 999999935000,
      "y": 0,
    },
    Object {
      "x": 999999940000,
      "y": 0,
    },
    Object {
      "x": 999999945000,
      "y": 0,
    },
    Object {
      "x": 999999950000,
      "y": 0,
    },
    Object {
      "x": 999999955000,
      "y": 0,
    },
    Object {
      "x": 999999960000,
      "y": 0,
    },
    Object {
      "x": 999999965000,
      "y": 0,
    },
    Object {
      "x": 999999970000,
      "y": 0,
    },
    Object {
      "x": 999999975000,
      "y": 0,
    },
    Object {
      "x": 999999980000,
      "y": 0,
    },
    Object {
      "x": 999999985000,
      "y": 0,
    },
    Object {
      "x": 999999990000,
      "y": 4,
    },
    Object {
      "x": 999999995000,
      "y": 5,
    },
    Object {
      "x": 1000000000000,
      "y": 6,
    },
  ],
}
`;

exports[`formatTimeseriesMap timespan < 15 minutes: timespan < 15 minutes 1`] = `
Object {
  "All": Array [
    Object {
      "x": 999999105000,
      "y": 0,
    },
    Object {
      "x": 999999110000,
      "y": 0,
    },
    Object {
      "x": 999999115000,
      "y": 0,
    },
    Object {
      "x": 999999120000,
      "y": 0,
    },
    Object {
      "x": 999999125000,
      "y": 0,
    },
    Object {
      "x": 999999130000,
      "y": 0,
    },
    Object {
      "x": 999999135000,
      "y": 0,
    },
    Object {
      "x": 999999140000,
      "y": 0,
    },
    Object {
      "x": 999999145000,
      "y": 0,
    },
    Object {
      "x": 999999150000,
      "y": 0,
    },
    Object {
      "x": 999999155000,
      "y": 0,
    },
    Object {
      "x": 999999160000,
      "y": 0,
    },
    Object {
      "x": 999999165000,
      "y": 0,
    },
    Object {
      "x": 999999170000,
      "y": 0,
    },
    Object {
      "x": 999999175000,
      "y": 0,
    },
    Object {
      "x": 999999180000,
      "y": 0,
    },
    Object {
      "x": 999999185000,
      "y": 0,
    },
    Object {
      "x": 999999190000,
      "y": 0,
    },
    Object {
      "x": 999999195000,
      "y": 0,
    },
    Object {
      "x": 999999200000,
      "y": 0,
    },
    Object {
      "x": 999999205000,
      "y": 0,
    },
    Object {
      "x": 999999210000,
      "y": 0,
    },
    Object {
      "x": 999999215000,
      "y": 0,
    },
    Object {
      "x": 999999220000,
      "y": 0,
    },
    Object {
      "x": 999999225000,
      "y": 0,
    },
    Object {
      "x": 999999230000,
      "y": 0,
    },
    Object {
      "x": 999999235000,
      "y": 0,
    },
    Object {
      "x": 999999240000,
      "y": 0,
    },
    Object {
      "x": 999999245000,
      "y": 0,
    },
    Object {
      "x": 999999250000,
      "y": 0,
    },
    Object {
      "x": 999999255000,
      "y": 0,
    },
    Object {
      "x": 999999260000,
      "y": 0,
    },
    Object {
      "x": 999999265000,
      "y": 0,
    },
    Object {
      "x": 999999270000,
      "y": 0,
    },
    Object {
      "x": 999999275000,
      "y": 0,
    },
    Object {
      "x": 999999280000,
      "y": 0,
    },
    Object {
      "x": 999999285000,
      "y": 0,
    },
    Object {
      "x": 999999290000,
      "y": 0,
    },
    Object {
      "x": 999999295000,
      "y": 0,
    },
    Object {
      "x": 999999300000,
      "y": 0,
    },
    Object {
      "x": 999999305000,
      "y": 0,
    },
    Object {
      "x": 999999310000,
      "y": 0,
    },
    Object {
      "x": 999999315000,
      "y": 0,
    },
    Object {
      "x": 999999320000,
      "y": 0,
    },
    Object {
      "x": 999999325000,
      "y": 0,
    },
    Object {
      "x": 999999330000,
      "y": 0,
    },
    Object {
      "x": 999999335000,
      "y": 0,
    },
    Object {
      "x": 999999340000,
      "y": 0,
    },
    Object {
      "x": 999999345000,
      "y": 0,
    },
    Object {
      "x": 999999350000,
      "y": 0,
    },
    Object {
      "x": 999999355000,
      "y": 0,
    },
    Object {
      "x": 999999360000,
      "y": 0,
    },
    Object {
      "x": 999999365000,
      "y": 0,
    },
    Object {
      "x": 999999370000,
      "y": 0,
    },
    Object {
      "x": 999999375000,
      "y": 0,
    },
    Object {
      "x": 999999380000,
      "y": 0,
    },
    Object {
      "x": 999999385000,
      "y": 0,
    },
    Object {
      "x": 999999390000,
      "y": 0,
    },
    Object {
      "x": 999999395000,
      "y": 0,
    },
    Object {
      "x": 999999400000,
      "y": 0,
    },
    Object {
      "x": 999999405000,
      "y": 0,
    },
    Object {
      "x": 999999410000,
      "y": 0,
    },
    Object {
      "x": 999999415000,
      "y": 0,
    },
    Object {
      "x": 999999420000,
      "y": 0,
    },
    Object {
      "x": 999999425000,
      "y": 0,
    },
    Object {
      "x": 999999430000,
      "y": 0,
    },
    Object {
      "x": 999999435000,
      "y": 0,
    },
    Object {
      "x": 999999440000,
      "y": 0,
    },
    Object {
      "x": 999999445000,
      "y": 0,
    },
    Object {
      "x": 999999450000,
      "y": 0,
    },
    Object {
      "x": 999999455000,
      "y": 0,
    },
    Object {
      "x": 999999460000,
      "y": 0,
    },
    Object {
      "x": 999999465000,
      "y": 0,
    },
    Object {
      "x": 999999470000,
      "y": 0,
    },
    Object {
      "x": 999999475000,
      "y": 0,
    },
    Object {
      "x": 999999480000,
      "y": 0,
    },
    Object {
      "x": 999999485000,
      "y": 0,
    },
    Object {
      "x": 999999490000,
      "y": 0,
    },
    Object {
      "x": 999999495000,
      "y": 0,
    },
    Object {
      "x": 999999500000,
      "y": 0,
    },
    Object {
      "x": 999999505000,
      "y": 0,
    },
    Object {
      "x": 999999510000,
      "y": 0,
    },
    Object {
      "x": 999999515000,
      "y": 0,
    },
    Object {
      "x": 999999520000,
      "y": 0,
    },
    Object {
      "x": 999999525000,
      "y": 0,
    },
    Object {
      "x": 999999530000,
      "y": 0,
    },
    Object {
      "x": 999999535000,
      "y": 0,
    },
    Object {
      "x": 999999540000,
      "y": 0,
    },
    Object {
      "x": 999999545000,
      "y": 0,
    },
    Object {
      "x": 999999550000,
      "y": 0,
    },
    Object {
      "x": 999999555000,
      "y": 0,
    },
    Object {
      "x": 999999560000,
      "y": 0,
    },
    Object {
      "x": 999999565000,
      "y": 0,
    },
    Object {
      "x": 999999570000,
      "y": 0,
    },
    Object {
      "x": 999999575000,
      "y": 0,
    },
    Object {
      "x": 999999580000,
      "y": 0,
    },
    Object {
      "x": 999999585000,
      "y": 0,
    },
    Object {
      "x": 999999590000,
      "y": 0,
    },
    Object {
      "x": 999999595000,
      "y": 0,
    },
    Object {
      "x": 999999600000,
      "y": 0,
    },
    Object {
      "x": 999999605000,
      "y": 0,
    },
    Object {
      "x": 999999610000,
      "y": 0,
    },
    Object {
      "x": 999999615000,
      "y": 0,
    },
    Object {
      "x": 999999620000,
      "y": 0,
    },
    Object {
      "x": 999999625000,
      "y": 0,
    },
    Object {
      "x": 999999630000,
      "y": 0,
    },
    Object {
      "x": 999999635000,
      "y": 0,
    },
    Object {
      "x": 999999640000,
      "y": 0,
    },
    Object {
      "x": 999999645000,
      "y": 0,
    },
    Object {
      "x": 999999650000,
      "y": 0,
    },
    Object {
      "x": 999999655000,
      "y": 0,
    },
    Object {
      "x": 999999660000,
      "y": 0,
    },
    Object {
      "x": 999999665000,
      "y": 0,
    },
    Object {
      "x": 999999670000,
      "y": 0,
    },
    Object {
      "x": 999999675000,
      "y": 0,
    },
    Object {
      "x": 999999680000,
      "y": 0,
    },
    Object {
      "x": 999999685000,
      "y": 0,
    },
    Object {
      "x": 999999690000,
      "y": 0,
    },
    Object {
      "x": 999999695000,
      "y": 0,
    },
    Object {
      "x": 999999700000,
      "y": 0,
    },
    Object {
      "x": 999999705000,
      "y": 0,
    },
    Object {
      "x": 999999710000,
      "y": 0,
    },
    Object {
      "x": 999999715000,
      "y": 0,
    },
    Object {
      "x": 999999720000,
      "y": 0,
    },
    Object {
      "x": 999999725000,
      "y": 0,
    },
    Object {
      "x": 999999730000,
      "y": 0,
    },
    Object {
      "x": 999999735000,
      "y": 0,
    },
    Object {
      "x": 999999740000,
      "y": 0,
    },
    Object {
      "x": 999999745000,
      "y": 0,
    },
    Object {
      "x": 999999750000,
      "y": 0,
    },
    Object {
      "x": 999999755000,
      "y": 0,
    },
    Object {
      "x": 999999760000,
      "y": 0,
    },
    Object {
      "x": 999999765000,
      "y": 0,
    },
    Object {
      "x": 999999770000,
      "y": 0,
    },
    Object {
      "x": 999999775000,
      "y": 0,
    },
    Object {
      "x": 999999780000,
      "y": 0,
    },
    Object {
      "x": 999999785000,
      "y": 0,
    },
    Object {
      "x": 999999790000,
      "y": 0,
    },
    Object {
      "x": 999999795000,
      "y": 0,
    },
    Object {
      "x": 999999800000,
      "y": 0,
    },
    Object {
      "x": 999999805000,
      "y": 0,
    },
    Object {
      "x": 999999810000,
      "y": 0,
    },
    Object {
      "x": 999999815000,
      "y": 0,
    },
    Object {
      "x": 999999820000,
      "y": 0,
    },
    Object {
      "x": 999999825000,
      "y": 0,
    },
    Object {
      "x": 999999830000,
      "y": 0,
    },
    Object {
      "x": 999999835000,
      "y": 0,
    },
    Object {
      "x": 999999840000,
      "y": 0,
    },
    Object {
      "x": 999999845000,
      "y": 0,
    },
    Object {
      "x": 999999850000,
      "y": 0,
    },
    Object {
      "x": 999999855000,
      "y": 0,
    },
    Object {
      "x": 999999860000,
      "y": 0,
    },
    Object {
      "x": 999999865000,
      "y": 0,
    },
    Object {
      "x": 999999870000,
      "y": 0,
    },
    Object {
      "x": 999999875000,
      "y": 0,
    },
    Object {
      "x": 999999880000,
      "y": 0,
    },
    Object {
      "x": 999999885000,
      "y": 0,
    },
    Object {
      "x": 999999890000,
      "y": 0,
    },
    Object {
      "x": 999999895000,
      "y": 0,
    },
    Object {
      "x": 999999900000,
      "y": 0,
    },
    Object {
      "x": 999999905000,
      "y": 0,
    },
    Object {
      "x": 999999910000,
      "y": 0,
    },
    Object {
      "x": 999999915000,
      "y": 0,
    },
    Object {
      "x": 999999920000,
      "y": 0,
    },
    Object {
      "x": 999999925000,
      "y": 0,
    },
    Object {
      "x": 999999930000,
      "y": 0,
    },
    Object {
      "x": 999999935000,
      "y": 0,
    },
    Object {
      "x": 999999940000,
      "y": 0,
    },
    Object {
      "x": 999999945000,
      "y": 0,
    },
    Object {
      "x": 999999950000,
      "y": 0,
    },
    Object {
      "x": 999999955000,
      "y": 0,
    },
    Object {
      "x": 999999960000,
      "y": 0,
    },
    Object {
      "x": 999999965000,
      "y": 0,
    },
    Object {
      "x": 999999970000,
      "y": 0,
    },
    Object {
      "x": 999999975000,
      "y": 0,
    },
    Object {
      "x": 999999980000,
      "y": 0,
    },
    Object {
      "x": 999999985000,
      "y": 0,
    },
    Object {
      "x": 999999990000,
      "y": 1,
    },
    Object {
      "x": 999999995000,
      "y": 2,
    },
    Object {
      "x": 1000000000000,
      "y": 3,
    },
  ],
}
`;
